Ticket #28593: Added tree selection model.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6414,6 +6414,8 @@ com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Gibt den Auswahlfilter für das erstellte <i>Auswahlmodell</i> zurück.
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Mehrfachselektion
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Ob das erstellte <i>Selektionsmodell</i> eine Mehrfachselektion unterstützen muss.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection = Baumauswahl
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection.tooltip = Ob das erstellte <i>Selektionsmodell</i> die Baumselektion unterstützt, d.h. wenn ein Knoten in einem Baum selektiert wird, bedeutet dies, dass alle Kinder selektiert werden.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Mehrfache Auswahl
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Ob mehrere Werte ausgewählt werden können.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Auswahlfilter
@@ -6473,6 +6475,14 @@ com.top_logic.mig.html.SelectionNaming.Name.selection-model = Auswahl-Modell
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name des <i>Selektionsmodells</i>.
 com.top_logic.mig.html.TreeSelectionModelFactory = Baumauswahl Modellfabrik
 com.top_logic.mig.html.TreeSelectionModelFactory.tooltip = <i>Standardauswahlmodellfabrik</i>, die <i>Baumknoten</i> auspackt, bevor sie die Knoten an den konfigurierten Filter weitergibt.
+com.top_logic.mig.html.TriState = Tri-State
+com.top_logic.mig.html.TriState.INDETERMINATE = Unbestimmt
+com.top_logic.mig.html.TriState.INDETERMINATE.tooltip = Darstellung eines unbestimmten Elements
+com.top_logic.mig.html.TriState.NOT_SELECTED = Nicht ausgewählt
+com.top_logic.mig.html.TriState.NOT_SELECTED.tooltip = Darstellung eines nicht ausgewählten Elements.
+com.top_logic.mig.html.TriState.SELECTED = Ausgewählt
+com.top_logic.mig.html.TriState.SELECTED.tooltip = Darstellung eines ausgewählten Elements.
+com.top_logic.mig.html.TriState.tooltip = <i>Enum</i>, das den Auswahlstatus einer Auswahl in einem <i>Baumauswahlmodell</i> darstellt.
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons = Öffner-Schaltflächen erstellen
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons.tooltip = Ob der <i>Open-Handler</i> als Schaltfläche sichtbar sein soll. <p> Wenn der Wert <code>false</code> ist, kann der Dialog vom Benutzer nicht direkt geöffnet werden. In diesem Fall muss in einer anderen Komponente ein Open-Handler konfiguriert werden, um den Dialog zu öffnen. </p>
 com.top_logic.mig.html.layout.AbstractWindowInfo.disabledImage.tooltip = Das Symbol, das für den Öffnungsbefehl verwendet werden soll, wenn der Dialog nicht geöffnet werden kann.
