Ticket #28593: Added tree selection model.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -1091,8 +1091,10 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.securityProviderClass.tooltip = Object on which the security is checked
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.selectCollapsed = Collapse selection
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.showOnlySelectableNodes = Show only selectable nodes
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.tree-selection = Tree-like selection
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.tree-selection.tooltip = A node is selected if all nodes in the subtree are selected. It is not selected if all nodes in the subtree are not selected. Otherwise the node is undefined.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label = Tree Table
-class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label.tooltip = A table with expandable rows. Such a table can be used either directly for visualization of information or as a context selection for another component.\ 
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label.tooltip = A table with expandable rows. Such a table can be used either directly for visualization of information or as a context selection for another component.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.defaultSelection = Select a node as default
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.dragSource = Drag operation
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.dropTargets = Drop operations
@@ -1106,6 +1108,8 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.name = Name
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.rootVisible = Root visible
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.securityProviderClass = Access control
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.tree-selection = Tree-like selection
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.tree-selection.tooltip = A node is selected if all nodes in the subtree are selected. It is not selected if all nodes in the subtree are not selected. Otherwise the node is undefined.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.viewSelector.template.label = Alternative views
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.viewSelector.template.label.tooltip = A set of components, only one of which is visible at any one time. Such a view is similar to a tab view where the tab bar is hidden. Implicitly, the first displayable component from the list of alternatives is always shown.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.commons.webfolder.documents.template.label = Document folder
