--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6392,6 +6392,8 @@ com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Returns the selection filter for the created <i>selection model</i>.
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Multiple
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Whether the created <i>selection model</i> must support multiple selection.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection = Tree selection
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection.tooltip = Whether the created <i>selection model</i> supports tree selection, i.e. when a node in a tree is selected, that means that all children are selected.
 com.top_logic.mig.html.DefaultSelectionModelFactory.tooltip = <i>Selection model factory</i> that creates "default" <i>selection models</i>.
 com.top_logic.mig.html.FilteringListModelBuilder = Filtering list model builder
 com.top_logic.mig.html.FilteringListModelBuilder.Config.filter = Filter
@@ -6445,6 +6447,14 @@ com.top_logic.mig.html.SelectionNaming$Name = Name
 com.top_logic.mig.html.SelectionNaming$Name.tooltip = Name of the selection of a <i>selection model</i>
 com.top_logic.mig.html.SelectionNaming.Name.selection-model = Selection model
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name of the <i>selection model</i>.
+com.top_logic.mig.html.TriState = Tri state
+com.top_logic.mig.html.TriState.INDETERMINATE = Indeterminate
+com.top_logic.mig.html.TriState.INDETERMINATE.tooltip = Representation of an indeterminate element
+com.top_logic.mig.html.TriState.NOT_SELECTED = Not selected
+com.top_logic.mig.html.TriState.NOT_SELECTED.tooltip = Representation of an unselected element.
+com.top_logic.mig.html.TriState.SELECTED = Selected
+com.top_logic.mig.html.TriState.SELECTED.tooltip = Representation of an selected element.
+com.top_logic.mig.html.TriState.tooltip = <i>Enum</i> representing a selection state of a selection in a <i>tree selection model</i>.
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons = Create opener buttons
 com.top_logic.mig.html.layout.AbstractWindowInfo.createOpenerButtons.tooltip = Whether the <i>Open handler</i> should be visible as button. <p> If the value is <code>false</code>, the dialog cannot be directly opened by the user. In that case, an open handler must be configured in some other component to open the dialog. </p>
 com.top_logic.mig.html.layout.AbstractWindowInfo.disabledImage.tooltip = The icon to use for the opening command, if the dialog cannot be opened.
