--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -1091,8 +1091,10 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.securityProviderClass.tooltip = Objekt auf dem die Sicherheit geprüft wird
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.selectCollapsed = Kollabieren der Selektion
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.showOnlySelectableNodes = Nur selektierbare Knoten anzeigen
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.tree-selection = Baumartige Selektion
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.tree.template.properties.tree-selection.tooltip = Ein Knoten ist genau dann selektiert, wenn alle Knoten in dem Teilbaum selektiert. Er ist nicht selektiert, wenn alle Knoten im Teilbaum nicht selektiert sind. Ansonsten ist der Knoten unbestimmt.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label = Baumtabelle
-class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label.tooltip = Eine Tabelle mit aufklappbaren Zeilen. Eine solche Tabelle kann entweder direkt zu Visualisierung von Informationen verwendet werden, oder als Kontextauswahl für eine weitere Komponente dienen.\ 
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.label.tooltip = Eine Tabelle mit aufklappbaren Zeilen. Eine solche Tabelle kann entweder direkt zu Visualisierung von Informationen verwendet werden, oder als Kontextauswahl für eine weitere Komponente dienen.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.defaultSelection = Selektiere einen Knoten standardmäßig
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.dragSource = Drag Operation
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.dropTargets = Drop Operationen
@@ -1106,6 +1108,8 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.name = Name
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.rootVisible = Wurzelknoten anzeigen
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.securityProviderClass = Zugriffssteuerung
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.tree-selection = Baumartige Selektion
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.treetable.template.properties.tree-selection.tooltip = Ein Knoten ist genau dann selektiert, wenn alle Knoten in dem Teilbaum selektiert. Er ist nicht selektiert, wenn alle Knoten im Teilbaum nicht selektiert sind. Ansonsten ist der Knoten unbestimmt.\ 
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.viewSelector.template.label = Alternative Sichten
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.viewSelector.template.label.tooltip = Eine Menge von Komponenten, von denen zu einem Zeitpunkt immer nur eine sichtbar ist. Eine solche Sicht ist vergleichbar einer Tab-Ansicht, bei der die Tabbar ausgeblendet ist. Implizit wird immer die erste darstellbare Komponente aus der Liste von Alternativen angezeigt.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.commons.webfolder.documents.template.label = Dokumentenordner
