Ticket #25918: Allow to click diagram elements and update CSS class.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -8,6 +8,10 @@ com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_INNER.tooltip = E
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER = Oben auﬂen
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER.tooltip = Ein Verbinder am oberen ‰uﬂeren Rand eines <i>Blocks</i>.
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.tooltip = Beschreibung der Position eines <i>Steckers</i> innerhalb seiner <code>Connector#getOwner()</code>.
+com.top_logic.graphic.blocks.svg.event.MouseButton = Maustaste
+com.top_logic.graphic.blocks.svg.event.MouseButton.LEFT = Links
+com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE = Mitte
+com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT = Rechts
 com.top_logic.graphic.flow.data.Alignment = Ausrichtung
 com.top_logic.graphic.flow.data.Alignment.MIDDLE = Mitte
 com.top_logic.graphic.flow.data.Alignment.START = Start
