--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -8,6 +8,10 @@ com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_INNER.tooltip = A
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER = Top outer
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER.tooltip = A connector at the top outer border of a <i>block</i>.
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.tooltip = Description of a <i>connector</i> position within its <code>Connector#getOwner()</code>.
+com.top_logic.graphic.blocks.svg.event.MouseButton = Mouse button
+com.top_logic.graphic.blocks.svg.event.MouseButton.LEFT = Left
+com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE = Middle
+com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT = Right
 com.top_logic.graphic.flow.data.Alignment = Alignment
 com.top_logic.graphic.flow.data.Alignment.MIDDLE = Middle
 com.top_logic.graphic.flow.data.Alignment.START = Start
