Ticket #25918: tl-demo: Enhanced flow chart demo.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.flowchart.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.flowchart.messages_de.properties
@@ -15,6 +15,7 @@ model.test.flowchart.Part = Part
 model.test.flowchart.Part.color = Color
 model.test.flowchart.Part.name = Name
 model.test.flowchart.Product = Product
+model.test.flowchart.Product.buildInstructions = Build instructions
 model.test.flowchart.Product.image = Image
 model.test.flowchart.Product.name = Name
 model.test.flowchart.Product.parts = Parts
