Ticket #25918: Updated JavaDoc.

--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_de.properties
@@ -14,9 +14,14 @@ com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE = Mitte
 com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT = Rechts
 com.top_logic.graphic.flow.data.Alignment = Ausrichtung
 com.top_logic.graphic.flow.data.Alignment.MIDDLE = Mitte
+com.top_logic.graphic.flow.data.Alignment.MIDDLE.tooltip = Der Inhalt wird innerhalb des verfügbaren Platzes des Containers zentriert.
 com.top_logic.graphic.flow.data.Alignment.START = Start
+com.top_logic.graphic.flow.data.Alignment.START.tooltip = Der Inhalt wird an der Startkoordinate des Containers ausgerichtet (von links nach rechts und von oben nach unten).
 com.top_logic.graphic.flow.data.Alignment.STOP = Stopp
+com.top_logic.graphic.flow.data.Alignment.STOP.tooltip = Der Inhalt wird an der Endkoordinate des Containers ausgerichtet (von links nach rechts und von oben nach unten).
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
+com.top_logic.graphic.flow.data.Alignment.STRECH.tooltip = Der Inhalt wird gestreckt, um sich der Größe des Containers anzupassen.
+com.top_logic.graphic.flow.data.Alignment.tooltip = Eine Ausrichtungsanweisung.
 com.top_logic.graphic.flow.data.DiagramDirection = Diagramm Richtung
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Der Inhalt des Diagramms wird von unten nach oben angeordnet.
@@ -48,16 +53,23 @@ com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID = X minimal ymid
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>min-x</code> der viewBox des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie den mittleren Y-Wert der ViewBox des Elements am mittleren Y-Wert des Ansichtsfensters aus.
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN = X minimal ymin
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN.tooltip = Erzwingt eine einheitliche Skalierung. Richtet die <code>min-x</code> der viewBox des Elements am kleinsten X-Wert des Ansichtsfensters aus. Richten Sie die <code>min-y</code> der viewBox des Elements am kleinsten Y-Wert des Ansichtsfensters aus.
+com.top_logic.graphic.flow.data.ImageAlign.tooltip = Ausrichten eines Bildes innerhalb eines Rahmens.
 com.top_logic.graphic.flow.data.ImageScale = Bildmaßstab
 com.top_logic.graphic.flow.data.ImageScale.MEET = Treffen Sie
 com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis bleibt erhalten.</li> <li>Die gesamte viewBox ist innerhalb des Ansichtsfensters sichtbar.</li> <li>Die viewBox wird so weit wie möglich skaliert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der Grafik nicht mit dem Ansichtsfenster übereinstimmt, erstreckt sich ein Teil des Ansichtsfensters über die Grenzen der viewBox hinaus (d. h. der Bereich, in den die viewBox gezeichnet wird, ist kleiner als das Ansichtsfenster). meet </p>
 com.top_logic.graphic.flow.data.ImageScale.SLICE = Slice
 com.top_logic.graphic.flow.data.ImageScale.SLICE.tooltip = Skaliert die Grafik so, dass: <ul> <li>Das Seitenverhältnis wird beibehalten.</li> <li>Das gesamte Ansichtsfenster wird von der viewBox abgedeckt.</li> <li>Die viewBox wird so weit wie möglich verkleinert, wobei die anderen Kriterien weiterhin erfüllt werden.</li> </ul> <p> Wenn in diesem Fall das Seitenverhältnis der viewBox nicht mit dem Ansichtsfenster übereinstimmt, ragt ein Teil der viewBox über die Grenzen des Ansichtsfensters hinaus (d. h. der Bereich, in den die viewBox gezeichnet wird, ist größer als das Ansichtsfenster). slice </p>
+com.top_logic.graphic.flow.data.ImageScale.tooltip = Skalierungsanweisung für ein Bild innerhalb eines Rahmens.
 com.top_logic.graphic.flow.data.SpaceDistribution = Raumverteilung
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = Keine
+com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Verwenden Sie keinen zusätzlichen Platz, sondern <i>richten Sie</i> die Zeile innerhalb ihres Containers aus.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_ALL = Alle dehnen
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_ALL.tooltip = Verteilen Sie den zusätzlichen Platz gleichmäßig auf den Inhalt und den Abstand zwischen den Feldern.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT = Inhalt strecken
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT.tooltip = Dehnen Sie die Inhaltsfelder, aber halten Sie den Abstand konstant.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP = Lücke dehnen
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP.tooltip = Dehnen Sie den Abstand zwischen den Feldern.
+com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Anweisung zur Verwendung von Exta-Leerzeichen in einem Zeilenlayout.
 com.top_logic.graphic.flow.data.Widget$TypeKind = Typ Art
 com.top_logic.graphic.flow.data.Widget$TypeKind.tooltip = Typcodes für die <i>Widget-Hierarchie</i>.
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Ausrichten
