--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -14,9 +14,14 @@ com.top_logic.graphic.blocks.svg.event.MouseButton.MIDDLE = Middle
 com.top_logic.graphic.blocks.svg.event.MouseButton.RIGHT = Right
 com.top_logic.graphic.flow.data.Alignment = Alignment
 com.top_logic.graphic.flow.data.Alignment.MIDDLE = Middle
+com.top_logic.graphic.flow.data.Alignment.MIDDLE.tooltip = The content is centered within the available space of the container.
 com.top_logic.graphic.flow.data.Alignment.START = Start
+com.top_logic.graphic.flow.data.Alignment.START.tooltip = The content is aligned to the start coordinate of the container (left-to-right and top-to-bottom).
 com.top_logic.graphic.flow.data.Alignment.STOP = Stop
+com.top_logic.graphic.flow.data.Alignment.STOP.tooltip = The content is aligned to the end coordinate of the container (left-to-right and top-to-bottom).
 com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
+com.top_logic.graphic.flow.data.Alignment.STRECH.tooltip = The content is stretched to fit the size of the container.
+com.top_logic.graphic.flow.data.Alignment.tooltip = An alignment instruction.
 com.top_logic.graphic.flow.data.DiagramDirection = Diagram direction
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP = Bottomup
 com.top_logic.graphic.flow.data.DiagramDirection.BOTTOMUP.tooltip = Diagram contents is layouted from bottom to top.
@@ -48,16 +53,23 @@ com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID = X minimum ymid
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN = X minimum ymin
 com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.tooltip = Alignment of an image within a box.
 com.top_logic.graphic.flow.data.ImageScale = Image scale
 com.top_logic.graphic.flow.data.ImageScale.MEET = Meet
 com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewBox is visible within the viewport.</li> <li>The viewBox is scaled up as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the graphic does not match the viewport, some of the viewport will extend beyond the bounds of the viewBox (i.e., the area into which the viewBox will draw will be smaller than the viewport). meet </p>
 com.top_logic.graphic.flow.data.ImageScale.SLICE = Slice
 com.top_logic.graphic.flow.data.ImageScale.SLICE.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewport is covered by the viewBox.</li> <li>The viewBox is scaled down as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the viewBox does not match the viewport, some of the viewBox will extend beyond the bounds of the viewport (i.e., the area into which the viewBox will draw is larger than the viewport). slice </p>
+com.top_logic.graphic.flow.data.ImageScale.tooltip = Scaling instruction for an image within a box.
 com.top_logic.graphic.flow.data.SpaceDistribution = Space distribution
 com.top_logic.graphic.flow.data.SpaceDistribution.NONE = None
+com.top_logic.graphic.flow.data.SpaceDistribution.NONE.tooltip = Do not use extra space, allow to <i>align</i> the row within its container.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_ALL = Stretch all
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_ALL.tooltip = Evenly distribute extra space among the content and the gap between boxes.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT = Stretch content
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT.tooltip = Stretch the content boxes but keep the gap constant.
 com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP = Stretch gap
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP.tooltip = Stretch the gap between boxes.
+com.top_logic.graphic.flow.data.SpaceDistribution.tooltip = Instruction how to use exta space in a row layout.
 com.top_logic.graphic.flow.data.Widget$TypeKind = Type kind
 com.top_logic.graphic.flow.data.Widget$TypeKind.tooltip = Type codes for the <i>widget</i> hierarchy.
 com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Align
