--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -800,15 +800,11 @@ com.top_logic.model.search.providers.ApplyCommandByExpression.tooltip = Apply co
 com.top_logic.model.search.providers.AttributeByExpression = Berechnung über TL-Skript
 com.top_logic.model.search.providers.AttributeByExpression.tooltip = <i>Attributwert-Locator</i>, der mit Hilfe von Suchausdrücken konfiguriert werden kann.
 com.top_logic.model.search.providers.AttributeValueBindingByExpression = Attributwert-Bindung über Ausdruck
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes = Schlüsselattribute
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes.tooltip = Die Attributnamen, in denen die abgerufenen Schlüsselwerte gespeichert werden sollen. <p> Wenn mehr als ein Attributname konfiguriert ist, wird erwartet, dass der <i>Key fun</i> eine Liste mit so vielen Einträgen berechnet, wie Schlüsselattributnamen angegeben werden. </p> <p> Wenn nur ein einziger Schlüsselattributname angegeben wird, kann der <i>Key fun</i> einen einzelnen Wert berechnen, der als Schlüssel verwendet werden soll. </p>
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-fun = Schlüssel-Funktion
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-fun.tooltip = Funktion, die einen Schlüssel aus einem gegebenen Objekt berechnet. <p> Die Funktion muss so viele Werte abrufen, wie <i>Schlüsselattribute</i> Namen enthalten. </p> <p> Wenn mehrere Schlüsselwerte zurückgegeben werden, müssen sie in eine Liste eingeschlossen werden. Das Ergebnis kann Schlüsselwerte beliebigen Typs (einschließlich <code>null</code>) enthalten, aber nur ihre kanonische String-Repräsentation wird gespeichert und später zum Abruf an <i>Resolver fun</i> übergeben. </p>
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.reference-tag = Referenz-Tag
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.reference-tag.tooltip = Der Tag-Name, der zum Speichern mehrerer Referenzen für ein Mehrfach-Attribut verwendet werden soll.
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.resolver-fun = Resolver-Funktion
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.resolver-fun.tooltip = Funktion, die ein Objekt auflöst, das so viele Werte wie <i>Schlüsselattribute</i> enthält, enthält Namen. <p> Wenn <i>Schlüsselattribute</i> einen einzigen Namen enthalten, wird eine Funktion mit einem Argument erwartet. Wenn <i>Schlüsselattribute</i> <code>n</code> Namen enthalten, wird eine Funktion <code>n</code> erwartet. Alle übergebenen Schlüsselargumente sind entweder vom Typ <i>String</i> oder <code>null</code>. </p>
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.tooltip = <i>Bindung von Attributwerten</i> durch konfigurierte Schlüsselextraktor- und Schlüsselauflösungsfunktionen in TL-Script.
+com.top_logic.model.search.providers.AttributeValueBindingByExpression.tooltip = <i>Bindung von Schlüsselwertattributen</i> unter Verwendung konfigurierter Schlüsselextraktor- und Schlüsselauflösungsfunktionen in TL-Script.
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression = Attributwert-Locator durch Ausdruck
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression.Config.expr = Ausdruck
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression.Config.expr.tooltip = Funktion, die ein Objekt auflöst. <p> Die Funktion erwartet das Basisobjekt als einzelnes Argument. </p>
@@ -959,6 +955,12 @@ com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identit
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver = Auflöser
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver.tooltip = Funktion, die ein Objekt anhand seiner ID auflöst. <p> Die Funktion erwartet die ID des Objekts als einziges Argument und gibt das aufgelöste Objekt zurück. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression.tooltip = <i>Instanzauflöser</i> in TL-Script implementiert.
+com.top_logic.model.search.providers.KeyValueAttributeBinding = Schlüssel-Wert-Attribut-Bindung
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.key-attributes = Schlüsselattribute
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.key-attributes.tooltip = Die Attributnamen, in denen die abgerufenen Schlüsselwerte gespeichert werden sollen. <p> Wenn mehr als ein Attributname konfiguriert ist, wird erwartet, dass die Schlüsselfunktion eine Liste mit so vielen Einträgen erstellt, wie Schlüsselattributnamen angegeben sind. </p> <p> Wird nur ein einziger Schlüsselattributname angegeben, kann die Schlüsselfunktion einen einzigen Wert berechnen, der als Schlüssel verwendet wird. </p>
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.reference-tag = Referenz-Tag
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.reference-tag.tooltip = Der Tag-Name, der für die Speicherung mehrerer Referenzen für ein Mehrfachattribut zu verwenden ist.
+com.top_logic.model.search.providers.KeyValueAttributeBinding.tooltip = <i>Bindung von Attributwerten</i> mit Hilfe eines Schlüsselextraktors und einer Schlüsselauflösungsfunktion.
 com.top_logic.model.search.providers.LabelByExpression = Beschriftung über TL-Script
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class = Css-Klasse
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class.tooltip = CSS-Klasse, die für jedes Objekt zurückgegeben wird. Wenn nicht gesetzt, wird der Wert aus dem inneren Provider verwendet.
