--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -800,15 +800,11 @@ com.top_logic.model.search.providers.ApplyCommandByExpression.tooltip = Apply co
 com.top_logic.model.search.providers.AttributeByExpression = Calculation via TL-Script
 com.top_logic.model.search.providers.AttributeByExpression.tooltip = <i>Attribute value locator</i> that can be configured using search expressions.
 com.top_logic.model.search.providers.AttributeValueBindingByExpression = Attribute value binding by expression
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes = Key attributes
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-attributes.tooltip = The attribute names to store retrieved key values in. <p> If more than one attribute name is configured, the <i>Key function</i> is expected to compute a list with as many entries as key attribute names are given. </p> <p> If only a single key attribute name is given, the <i>Key function</i> may compute a single value to use as key. </p>
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-fun = Key function
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.key-fun.tooltip = Function computing a key from a given object. <p> The function must retrieve as many values as <i>Key attributes</i> contains names. </p> <p> If multiple key values are returned, they must be wrapped in a list. The result may contain key values of any type (including <code>null</code>), but only their canonical string-representation is stored and passed to <i>Resolver function</i> later on for retrieval. </p>
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.reference-tag = Reference tag
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.reference-tag.tooltip = The tag name to use for storing multiple references for a multiple attribute.
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.resolver-fun = Resolver function
 com.top_logic.model.search.providers.AttributeValueBindingByExpression.Config.resolver-fun.tooltip = Function resolving an object given as many values as <i>Key attributes</i> contains names. <p> If <i>Key attributes</i> contains a single name, a one-argument function is expected. If <i>Key attributes</i> contains <code>n</code> names, a <code>n</code>-argument function is expected. All key arguments passed in are either of type <i>string</i> or <code>null</code>. </p>
-com.top_logic.model.search.providers.AttributeValueBindingByExpression.tooltip = <i>Attribute value binding</i> using configured key extractor and key resolver functions in TL-Script.
+com.top_logic.model.search.providers.AttributeValueBindingByExpression.tooltip = <i>Key value attribute binding</i> using configured key extractor and key resolver functions in TL-Script.
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression = Attribute value locator by expression
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression.Config.expr = Expression
 com.top_logic.model.search.providers.AttributeValueLocatorByExpression.Config.expr.tooltip = Function resolving an object. <p> The function expects the base object as single argument. </p>
@@ -959,6 +955,12 @@ com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identit
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver = Resolver
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.resolver.tooltip = Function resolving an object from its ID. <p> The function expects the object's ID as single argument and returns the resolved object. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression.tooltip = <i>Instance resolver</i> implemented in TL-Script.
+com.top_logic.model.search.providers.KeyValueAttributeBinding = Key value attribute binding
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.key-attributes = Key attributes
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.key-attributes.tooltip = The attribute names to store retrieved key values in. <p> If more than one attribute name is configured, the key function is expected to compute a list with as many entries as key attribute names are given. </p> <p> If only a single key attribute name is given, the key function may compute a single value to use as key. </p>
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.reference-tag = Reference tag
+com.top_logic.model.search.providers.KeyValueAttributeBinding.Config.reference-tag.tooltip = The tag name to use for storing multiple references for a multiple attribute.
+com.top_logic.model.search.providers.KeyValueAttributeBinding.tooltip = <i>Attribute value binding</i> using a key extractor and key resolver function.
 com.top_logic.model.search.providers.LabelByExpression = Label by expression
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class = Css class
 com.top_logic.model.search.providers.LabelByExpression.Config.css-class.tooltip = CSS class to return for each object. If not set, the value from the inner provider is used.
