--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_en.properties
@@ -240,7 +240,7 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.securityProviderClass.tooltip = Object on which the security is checked
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.showDetailOpener = Show detail opener
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection = Tree-like selection
-class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection.tooltip = A node is selected if all nodes in the subtree are selected. It is not selected if all nodes in the subtree are not selected. Otherwise the node is undefined.
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection.tooltip = A node is selected if all nodes in the subtree are selected. It is not selected if no nodes in the subtree are selected. Otherwise, the node is undefined.
 com.top_logic.element.boundsec.manager.rule.RoleProvider.Type.inheritance = Inheritance
 com.top_logic.element.boundsec.manager.rule.RoleProvider.Type.reference = Reference
 com.top_logic.element.config.AttributedTypeConfig.attributes = Attributes
