--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/ElementMessages_de.properties
@@ -240,7 +240,7 @@ class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.securityProviderClass.tooltip = Objekt auf dem die Sicherheit geprüft wird
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.showDetailOpener = Knopf für Detail-Anzeige
 class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection = Baumartige Selektion
-class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection.tooltip = Ein Knoten ist genau dann selektiert, wenn alle Knoten in dem Teilbaum selektiert. Er ist nicht selektiert, wenn alle Knoten im Teilbaum nicht selektiert sind. Ansonsten ist der knoten unbestimmt.
+class.com.top_logic.layout.editor.I18NConstants.DYNAMIC_COMPONENT.com.top_logic.element.treegrid.template.properties.tree-selection.tooltip = Ein Knoten ist genau dann selektiert, wenn alle Knoten in dem Teilbaum selektiert sind. Er ist nicht selektiert, wenn kein Knoten im Teilbaum selektiert sind. Ansonsten ist der Knoten unbestimmt.
 com.top_logic.element.boundsec.manager.rule.RoleProvider.Type.inheritance = Vererbung
 com.top_logic.element.boundsec.manager.rule.RoleProvider.Type.reference = Referenz
 com.top_logic.element.config.AttributedTypeConfig.attributes = Attribute
