--- a/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_de.properties
@@ -126,6 +126,8 @@ com.top_logic.bpe.execution.engine.FormEditAction.manual-task.tooltip = Die <i>m
 com.top_logic.bpe.execution.engine.FormEditActionOp = Formular-Editieraktion
 com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Anwendungsaktion</i> zum Festlegen einer <i>Formulardefinition</i> für eine <i>manuelle Aufgabe</i>.
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export als PDF-Handler
+com.top_logic.bpe.execution.export.GroupByNameBinding = Binding für Gruppenattribute
+com.top_logic.bpe.execution.export.GroupByNameBinding.tooltip = <i>Attributwertbindung</i>, die in der Lage ist, Attribute des Typs <i>group</i> in XML zu serialisieren.
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Erbauer
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i> zur <i>Erstellung</i> einer <i>Prozessinstanzfunktion</i>.
 com.top_logic.bpe.execution.script.ExecuteTransition$Builder = Erbauer
