--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -126,6 +126,8 @@ com.top_logic.bpe.execution.engine.FormEditAction.manual-task.tooltip = The <i>m
 com.top_logic.bpe.execution.engine.FormEditActionOp = Form edit action
 com.top_logic.bpe.execution.engine.FormEditActionOp.tooltip = <i>Application scripting action</i> to set a <i>form definition</i> for a <i>manual task</i>.
 com.top_logic.bpe.execution.export.ExportAsPdfHandler = Export as pdf handler
+com.top_logic.bpe.execution.export.GroupByNameBinding = Group by name binding
+com.top_logic.bpe.execution.export.GroupByNameBinding.tooltip = <i>Attribute value binding</i> that is able to serialize attributes of type <i>group</i> to XML.
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder = Builder
 com.top_logic.bpe.execution.script.CreateProcessInstance$Builder.tooltip = <i>Simple method builder</i> creating an <i>create process instance</i> function.
 com.top_logic.bpe.execution.script.ExecuteTransition$Builder = Builder
