--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.dynamicmode.messages_de.properties
@@ -9,6 +9,8 @@ model.test.dynamicmode.Acquisition.price = Grundpreis
 model.test.dynamicmode.Acquisition.price.tooltip = Der Grundpreis des Vorhabens. Wenn die Summe des Grundpreises und der Werte aller Einzelpositionen 10.000\u20AC übersteigt, muss eine Begründung eingegeben werden.
 model.test.dynamicmode.Acquisition.reason = Begründung
 model.test.dynamicmode.Acquisition.reason.tooltip = Sobald der Gesamtwert der Anschaffung einen 10.000\u20AC übersteigt, muss eine Begründung für die Anschaffung abgegeben werden. Der Gesamtwert setzt sich zusammen aus dem Grundpreis und den Werten aller Einzelpositionen.
+model.test.dynamicmode.Acquisition.totalPositions = Summe Positionen
+model.test.dynamicmode.Acquisition.totalPositions.tooltip = Die Summe der Werte der Einzelpositionen. Der Wert wird nur dargestellt, wenn es auch Einzelpositionen gibt.
 model.test.dynamicmode.Category = Kategorie
 model.test.dynamicmode.Category.Consumables = Verbrauchsmaterial
 model.test.dynamicmode.Category.Investment = Investition
